[package]
name = "fierceful-atto"
version = "0.1.0"
description = "Modular battle system for turn-based RPGs"
repository = "https://github.com/meziu/fierceful-atto"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
log = "0.4.21"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
ron = { version = "0.8" }
humantime = "2.1.0"
fern = "0.6.2"
ratatui = "0.27.0"

[features]
default = []
serde = ["dep:serde"]
