[package]
name = "fierceful-atto"
version = "0.1.0"
description = "Modular battle system for turn-based RPGs"
repository = "https://github.com/meziu/fierceful-atto"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
log = "0.4.21"
num = "0.4.3"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
ron = { version = "0.10" }
humantime = "2.1"
fern = "0.7"
ratatui = "0.29"
rand = "0.8"

[features]
default = []
serde = ["dep:serde"]
